--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -4,7 +4,7 @@
     <main class="container mx-auto px-4 py-6 max-w-5xl">
 
         <div class=" mb-6 text-center">
-            <h1 class="text-xl font-semibold text-gray-900 mb-3" i18n="@@home.title">Free Temporary Email Service -
+            <h1 class="text-xl md:text-2xl  font-bold text-gray-900 mb-3" i18n="@@home.title">Free Temporary Email Service -
                 Secure & Anonymous Temp
                 Mail</h1>
 
@@ -23,14 +23,14 @@
 
         <!-- How It Works Section -->
         <div class="bg-white rounded-lg md:shadow-sm md:p-5 mt-6">
-            <h2 class="text-lg font-semibold text-gray-900 mb-4" i18n="@@home.howToUse.title">How to use this tool to
+            <h2 class="text-xl md:text-2xl font-bold text-gray-900 mb-4" i18n="@@home.howToUse.title">How to use this tool to
                 protect your inbox in 3 Simple
                 Steps</h2>
 
             <div class="space-y-6">
                 <!-- Step 1: Get Started -->
                 <div class="border border-gray-200 rounded-lg p-4 bg-blue-50/20">
-                    <h3 class="font-medium text-gray-900 mb-3 flex items-center" i18n="@@home.step1.title">
+                    <h3 class="font-semibold text-gray-900 mb-4 flex items-center text-lg" i18n="@@home.step1.title">
                         <span
                             class="bg-blue-100 text-blue-800 w-6 h-6 rounded-full flex items-center justify-center mr-2">1</span>
                         Get Your Temporary Email
@@ -49,7 +49,7 @@
 
                 <!-- Step 2: Use Your Email -->
                 <div class="border border-gray-200 rounded-lg p-4 bg-green-50/20">
-                    <h3 i18n="@@home.step2.title" class="font-medium text-gray-900 mb-3 flex items-center">
+                    <h3 i18n="@@home.step2.title" class="font-semibold text-gray-900 mb-4 flex items-center text-lg">
                         <span
                             class="bg-green-100 text-green-800 w-6 h-6 rounded-full flex items-center justify-center mr-2">2</span>
                         Use It Anywhere
@@ -66,7 +66,7 @@
 
                 <!-- Step 3: Save for Longer -->
                 <div class="border border-gray-200 rounded-lg p-4 bg-purple-50/20">
-                    <h3 class="font-medium text-gray-900 mb-3 flex items-center">
+                    <h3 class="font-semibold text-gray-900 mb-4 flex items-center text-lg">
                         <span
                             class="bg-purple-100 text-purple-800 w-6 h-6 rounded-full flex items-center justify-center mr-2">3</span>
                         Save for 7 Days (Optional)
@@ -144,7 +144,7 @@
 
 
         <div class="bg-white rounded-lg md:shadow-sm md:p-5 mt-6">
-            <h2 i18n="@@home.about.title" class="text-lg font-semibold text-gray-900 mb-4">About Our Temporary Email
+            <h2 i18n="@@home.about.title" class="text-xl md:text-2xl font-bold mb-4">About Our Temporary Email
                 Service</h2>
             <div class="text-sm text-gray-600 space-y-4">
                 <p i18n="@@home.about.description1">Our <strong>free disposable email service</strong> provides users
@@ -162,20 +162,11 @@
                     processes or
                     retrieve important information without rushing.</p>
 
-                <h3 i18n="@@home.about.usesTitle" class="font-semibold text-lg text-gray-900 mt-4">Common Uses for
-                    Temporary Emails:</h3>
-                <ul class="list-disc pl-5 space-y-2">
-                    <li i18n="@@home.about.use1">Website registrations and sign-ups</li>
-                    <li i18n="@@home.about.use2">App testing and development</li>
-                    <li i18n="@@home.about.use3">Online shopping from new retailers</li>
-                    <li i18n="@@home.about.use4">Accessing free trials without commitment</li>
-                    <li i18n="@@home.about.use5">Protecting your primary email from spam</li>
-                </ul>
 
                 <!-- Comparison Section (LSI Keywords) -->
                 <div class="bg-white rounded-lg mt-8">
                     <h2 i18n="@@home.comparison.title"
-                        class="text-lg font-semibold text-gray-900 mb-4 flex items-center">Temporary Email vs Regular
+                        class="text-lg md:text-xl font-bold mb-4 flex items-center">Temporary Email vs Regular
                         Email</h2>
 
                     <div class="overflow-x-auto">
@@ -225,7 +216,7 @@
 
 
                 <div class="bg-white mt-10">
-                    <h3 i18n="@@home.faq.title" class="text-lg font-semibold text-gray-900  mb-4 flex items-center">
+                    <h3 i18n="@@home.faq.title" class="text-xl md:text-2xl font-bold text-gray-900  mb-4 flex items-center">
                         Frequently Asked Questions
                     </h3>
                     <div class="space-y-4">
