--- a/src/app/compoents/quick-email/quick-email.component.html
+++ b/src/app/compoents/quick-email/quick-email.component.html
@@ -8,7 +8,7 @@
     <div class="border-2 rounded-lg border-gray-400 mb-4">
       <!-- Email Header with Timer -->
       <div
-        class="bg-gray-50 px-4 py-3 border-b border-gray-200 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-2">
+        class="bg-gray-50 rounded-lg px-4 py-3 border-b border-gray-200 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-2">
         <div class="flex items-center gap-2">
           <h2 class="text-base font-semibold text-gray-900" i18n="@@quickEmail.title">Your Quick Email Address</h2>
           <div class="flex items-center gap-2">
