--- a/src/app/compoents/quick-email/quick-email.component.html
+++ b/src/app/compoents/quick-email/quick-email.component.html
@@ -2,7 +2,7 @@
 
 
   <!-- Main Content -->
-  <main class="container mx-auto px-4 py-4 max-w-4xl">
+  <main class="container mx-auto  py-4 max-w-4xl">
 
     <!-- Email Card with Timer -->
     <div class="border-2 rounded-lg border-gray-400 mb-4">
