--- a/src/app/compoents/quick-email/quick-email.component.html
+++ b/src/app/compoents/quick-email/quick-email.component.html
@@ -122,7 +122,7 @@
     <!-- Inbox Section -->
     <div class="border-2 rounded-lg border-gray-400">
       <div
-        class="px-4 py-3 border-b border-gray-200 flex flex-col sm:flex-row justify-between items-start sm:items-center gap-2">
+        class="px-4 py-3 border-b border-gray-200 flex   justify-between items-start sm:items-center gap-2">
         <h2 class="text-base font-semibold text-gray-900" i18n="@@quickEmail.inbox">Your Temporary Inbox</h2>
         <div class="flex items-center gap-2">
           <span class="text-xs text-gray-600" i18n="@@quickEmail.autoRefresh">Auto-refresh in {{ countdown() }}s</span>
