--- a/src/app/compoents/quick-email/quick-email.component.html
+++ b/src/app/compoents/quick-email/quick-email.component.html
@@ -74,7 +74,7 @@
           <!-- Mobile Buttons (shown only on mobile, outside the email container) -->
           <div class="flex md:hidden justify-end mt-3 space-x-2">
             <!-- New Button -->
-            <div class="relative group w-28">
+            <div class="relative group">
               <button (click)="generateNewQuickEmail()"
                 class="w-full px-2 text-xs py-1 text-gray-600 hover:text-gray-900 hover:bg-gray-200 rounded-lg transition-all duration-200 font-medium border border-gray-300 flex items-center justify-center space-x-1">
                 <lucide-icon name="refresh-cw" [size]="16"></lucide-icon>
@@ -120,7 +120,10 @@
     </div>
 
     <!-- Inbox Section -->
-    <div class="border-2 rounded-lg border-gray-400">
+    <div class="border-2 rounded-lg border-gray-400 relative">
+        <div  class="h-1 overflow-hidden rounded-t-2xl">
+          <div class="h-full loader-bar" *ngIf="refreshing"></div>
+      </div>
       <div
         class="px-4 py-3 border-b border-gray-200 flex   justify-between items-start sm:items-center gap-2">
         <h2 class="text-base font-semibold text-gray-900" i18n="@@quickEmail.inbox">Your Temporary Inbox</h2>
@@ -144,6 +147,12 @@
             style="animation-duration: 2s;"></lucide-icon>
           <p class="text-sm text-gray-600" i18n="@@quickEmail.waitingForMessages">Waiting for messages for <span class="font-medium">{{currentEmail}}</span>
           </p>
+                 <button
+                (click)="refreshEmails()"
+                class="mt-3 inline-flex items-center gap-2 rounded-lg bg-gray-100 px-3.5 py-2 text-sm text-gray-900 hover:bg-gray-200 ring-1 ring-inset ring-gray-200 transition">
+                <lucide-icon name="refresh-cw" [size]="14" [class.animate-spin]="refreshing"></lucide-icon>
+                <span i18n="@@mainTempMail.checkAgain">Check Again</span>
+              </button>
         </div>
         } @else {
         <div class="space-y-2">
