--- a/src/app/compoents/main-temp-mail/main-temp-mail.html
+++ b/src/app/compoents/main-temp-mail/main-temp-mail.html
@@ -81,7 +81,7 @@
           </div>
 
           <!-- Current email -->
-          <div class="inline-flex items-center gap-2 min-w-0">
+          <div class="inline-flex items-center gap-2 min-w-0 cursor-pointer " (click)="copyEmail()">
             <span class="inline-flex items-center gap-2 rounded-lg bg-white px-2.5 py-1 ring-1 ring-gray-200">
               <lucide-icon name="inbox" [size]="16" class="text-gray-500"></lucide-icon>
               <span class="font-mono text-gray-900 truncate text-sm md:text-base">
