--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -196,7 +196,7 @@
     </li>
     <li class="p-3 rounded-lg bg-gray-50 ring-1 ring-gray-200"
         i18n="@@home.section.who.li7.label">
-      <strong>Social media users</strong> – create safe accounts on Instagram, Discord, Reddit, TikTok, or Telegram.
+      <strong>Social media users</strong> – create safe accounts on Facebook, Instagram, Discord, Reddit, TikTok, or Telegram.
     </li>
     <li class="p-3 rounded-lg bg-gray-50 ring-1 ring-gray-200"
         i18n="@@home.section.who.li8.label">
