--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -33,7 +33,7 @@
 
       <p class="text-sm md:text-base text-gray-700 leading-relaxed"
          i18n="@@home.section.what.para1.label">
-        A <strong>temporary fake email</strong> (also called <em>disposable email, one time inbox, fake email, burner mail, or temp mail</em>) is a short lived inbox that you can use for online activities.
+        A <strong>temporary fake email</strong> (also called <em>disposable email, one time inbox, burner mail, or temp mail</em>) is a short lived inbox that you can use for online activities.
         Instead of giving out your personal Gmail, Outlook, or Yahoo address, you get an instant anonymous inbox
         that automatically deletes itself after a certain time.
       </p>
