--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -5,12 +5,12 @@
     <div class="container mx-auto px-4 pt-5 md:pt-16 pb-10 text-center">
       <h1 class="text-3xl md:text-4xl font-extrabold text-gray-900 mb-4"
           i18n="@@home.section.hero.title.label">
-        Free Temporary Fake Email
+        Free Temporary Email Service
       </h1>
 
       <p class="text-sm md:text-base text-gray-700 leading-relaxed mb-8"
          i18n="@@home.section.hero.subtitle.label">
-        Generate disposable fake email addresses and manage your temporary inbox
+        A fresh temporary email has been created for you below. Use it instantly for signups, OTPs, or downloads while keeping your personal inbox safe.
       </p>
 
       <div class="rounded-2xl bg-white shadow-xl ring-1 ring-gray-200">
@@ -25,12 +25,12 @@
     <section id="what" class="bg-white rounded-2xl ring-1 ring-gray-200 p-5 md:p-7 mt-8">
       <h2 class="text-2xl md:text-3xl font-bold mb-4"
           i18n="@@home.section.what.title.label">
-        What is a Temporary Fake Email? (One Time Inbox)
+        What is a Temporary Email? (One Time Inbox)
       </h2>
 
       <p class="text-sm md:text-base text-gray-700 leading-relaxed"
          i18n="@@home.section.what.para1.label">
-        A <strong>temporary fake email</strong> (also called <em>disposable email, one time inbox, burner mail, or temp mail</em>) is a short lived inbox that you can use for online activities.
+        A <strong>temporary email</strong> (also called <em>disposable email, one time inbox,fake email, burner mail, or temp mail</em>) is a short lived inbox that you can use for online activities.
         Instead of giving out your personal Gmail, Outlook, or Yahoo address, you get an instant anonymous inbox
         that automatically deletes itself after a certain time.
       </p>
@@ -118,7 +118,7 @@
 
       <p class="text-sm md:text-base text-gray-700 leading-relaxed mb-4"
         i18n="@@home.section.when.intro.label">
-        A temporary email isn’t for everything, it’s best used for quick, low-risk, and disposable tasks. 
+        A temp mail isn’t for everything, it’s best used for quick, low-risk, and disposable tasks. 
         Many people rely on it for <strong>social media signups</strong> like Instagram, Discord, Reddit, TikTok, Telegram, or Facebook. 
         It’s also handy for testing apps, downloading resources, or staying anonymous online.
       </p>
@@ -157,12 +157,12 @@
 <section id="who" class="bg-white rounded-2xl ring-1 ring-gray-200 p-5 md:p-7 mt-8">
   <h2 class="text-2xl md:text-3xl font-bold mb-4"
       i18n="@@home.section.who.title.label">
-    Who Uses Burner Emails?
+    Who Uses Temp Emails?
   </h2>
 
   <p class="text-sm md:text-base text-gray-700 leading-relaxed mb-4"
      i18n="@@home.section.who.intro.label">
-    Temporary emails are useful for many groups of people. 
+    Temp emails are useful for many groups of people. 
     <strong>Here are the most common users and how they benefit:</strong>
   </p>
 
@@ -218,7 +218,7 @@
     <section id="comparison" class="bg-white rounded-2xl ring-1 ring-gray-200 p-5 md:p-7 mt-8">
       <h2 class="text-2xl font-bold mb-4"
           i18n="@@home.section.comparison.title.label">
-        Temporary Email vs Regular Email
+       Temp Mail vs Regular Email
       </h2>
 
       <div class="overflow-x-auto rounded-xl ring-1 ring-gray-200">
